tests/diagnostics_golden/diag_move_source_not_nonnull.txt
Diagnostics Golden: Move Source Not Nonnull
Source: tests/negative/neg_own_source_maybe_null.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_source_maybe_null.safe:15:7: error: move source 'source' is not provably non-null
  |
  | 15 |       target = source;  -- ERROR: source is not provably non-null
  |    |       ^~~~~~~~~~~~~~~~
  |
  note: static analysis determined state 'Null' at this move site.
  note: rule: Safe §2.3.2 (source of move must be provably non-null)
------------------------------------------------------------------------
